[package]
name = "hn-rs"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
  "lib/hackernews"
]

[dependencies]
chrono = "0.4.41"
crossterm = "0.29.0"
directories = "6.0.0"
futures = "0.3.31"
hackernews = { path = "lib/hackernews" }
html2text = "0.15.0"
open = "5.3.2"
ratatui = "0.29.0"
serde = "1.0.219"
serde_json = "1.0.142"
tokio = "1.45.0"
